--- a/templates/seasons/index.html.twig
+++ b/templates/seasons/index.html.twig
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block body %}
+<div class="text-center">
+    <img 
+        src="{{ asset('uploads/covers/') ~ series.coverImagePath }}" 
+        alt="Imagem de capa da série {{ series.name }}" 
+        class="image-fluid mb-3" 
+    />
+</div>
 <ul class="list-group">
     {% for season in seasons %}
     <li class="list-group-item d-flex justify-content-between align-items-center">
